fix(菜单): 菜单分配
菜单联动问题，需要再次联调修改